kube/recipebook-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipebook-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipebook-api
  template:
    metadata:
      labels:
        app: recipebook-api
    spec:
      containers:
        - name: app
          image: sreenathofficial/recipebook-api:0.0.1
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
