kube/recipebook-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipebook-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipebook-ui
  template:
    metadata:
      labels:
        app: recipebook-ui
    spec:
      containers:
        - name: app
          image: sreenathofficial/recipebook-ui:0.0.1
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
