kube/recipebook-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipebook-api-service
spec:
  selector:
    app: recipebook-api
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  type: ClusterIP
