kube/recipebook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipebook-ui-service
spec:
  selector:
    app: recipebook-ui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  type: ClusterIP
